syntax = "proto3";

package protobuff;

option go_package = "./dbauth/;dbauth";

service dbAuthService {
  // Метод для регистрации
  rpc RegisterCompany (RegisterCompanyRequest) returns (RegisterCompanyResponse);
  // Метод для логинизации
  rpc LoginDB (LoginDBRequest) returns (LoginDBResponse);
}

message RegisterCompanyRequest {
  string nameCompany = 1;
  string address = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
}

message RegisterCompanyResponse {
  string message = 1;
}

message LoginDBRequest {
  string email = 1;
  string phone = 2;
  string password = 3;
}

message LoginDBResponse {
  string message = 1;
}

