syntax = "proto3";

package protobuff;

option go_package = "./redis/;redis";

service RedisService {
  // Метод для регистрации
  rpc Save (SaveRedisRequest) returns (SaveRedisResponse);
  rpc Get (GetRedisRequest) returns (GetRedisResponse);
}

message SaveRedisRequest {
  string key = 1;
  string value = 2;
  int64 expiration = 3; // Время в секундах
}

message SaveRedisResponse {
  uint32 status = 3;
  string message = 1;
}

message GetRedisRequest {
  string key = 1;
}

message GetRedisResponse {
  uint32 status = 3;
  string message = 2;
}
